# PantherWM

./: CMakeLists.txt  README.md
include/: Util.hpp  WindowManager.hpp
resources/: run.sh  xinitrc
src/: Util.cpp  WindowManager.cpp  main.cpp
